--- a/lsr-redis-lock/pom.xml
+++ b/lsr-redis-lock/pom.xml
@@ -9,17 +9,32 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>lsr-redis-lock</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>lsr-redis-core</module>
-        <module>lsr-redis-service</module>
-        <module>lsr-redis-web</module>
-    </modules>
-
+    <packaging>jar</packaging>
     <dependencies>
-
+        <!--redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <!--jedis-->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
+        <!--lang3-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <!--json-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
     </dependencies>
-
-
 
 </project>
