--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <thymeleaf.version>2.0.7.0</thymeleaf.version>
         <lang3.version>3.1</lang3.version>
         <fastjson.version>1.2.47</fastjson.version>
+        <jackson-databind.version>2.10.1</jackson-databind.version>
         <druid.version>1.1.9</druid.version>
         <tomcat.version>4.0.1</tomcat.version>
         <log4j.version>1.7.25</log4j.version>
@@ -160,6 +161,11 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
                 <version>${fastjson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson-databind.version}</version>
             </dependency>
             <!--lang3-->
             <dependency>
