--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <thymeleaf.version>2.0.7.0</thymeleaf.version>
         <lang3.version>3.1</lang3.version>
         <fastjson.version>1.2.47</fastjson.version>
-        <jackson-databind.version>2.10.1</jackson-databind.version>
+        <jackson-databind.version>2.9.6</jackson-databind.version>
         <druid.version>1.1.9</druid.version>
         <tomcat.version>4.0.1</tomcat.version>
         <log4j.version>1.7.25</log4j.version>
@@ -165,6 +165,18 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
+                <!--解决启动报错问题-->
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-annotations</artifactId>
+                    </exclusion>
+                </exclusions>
+                <version>${jackson-databind.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
                 <version>${jackson-databind.version}</version>
             </dependency>
             <!--lang3-->
