--- a/lsr-common/pom.xml
+++ b/lsr-common/pom.xml
@@ -12,6 +12,7 @@
     <artifactId>lsr-common</artifactId>
     <packaging>jar</packaging>
 
+
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -39,7 +40,7 @@
         <!--spring-->
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
+            <artifactId>spring-context</artifactId>
         </dependency>
 
     </dependencies>
