--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <tomcat.version>4.0.1</tomcat.version>
         <log4j.version>1.7.25</log4j.version>
         <spring.version>5.2.2.RELEASE</spring.version>
+        <spring.context>4.3.10.RELEASE</spring.context>
         <jedis.version>2.9.0</jedis.version>
         <entity.api.version>1.0</entity.api.version>
     </properties>
@@ -227,6 +228,12 @@
                 <artifactId>persistence-api</artifactId>
                 <version>${entity.api.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${spring.context}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
