--- a/lsr-dependencies-bom/pom.xml
+++ b/lsr-dependencies-bom/pom.xml
@@ -132,6 +132,12 @@
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>${mybatis.version}</version>
             </dependency>
+            <!--######################### 定义 jpa 版本 #########################-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-jpa</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
             <!--######################### 定义 mapper 版本 #########################-->
             <dependency>
                 <groupId>tk.mybatis</groupId>
