--- a/lsr-batch-processing/pom.xml
+++ b/lsr-batch-processing/pom.xml
@@ -38,6 +38,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        <!--######################### 定义 log4j 版本 #########################-->
+        <!-- 支持log4j2的模块，注意把spring-boot-starter和spring-boot-starter-web包中的logging去掉 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
         <!--######################### 定义 test 版本 #########################-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
