--- a/lsr-dependencies-bom/pom.xml
+++ b/lsr-dependencies-bom/pom.xml
@@ -11,6 +11,7 @@
     <properties>
         <spring-cloud.version>Greenwich.SR4</spring-cloud.version>
         <spring-boot.version>2.1.0.RELEASE</spring-boot.version>
+        <spring.version>5.1.2.RELEASE</spring.version>
         <druid.version>1.1.10</druid.version>
         <mysql.version>5.1.46</mysql.version>
         <mybatis.version>1.3.2</mybatis.version>
@@ -28,6 +29,7 @@
         <fastjson.version>1.2.47</fastjson.version>
         <jackson-databind.version>2.10.2</jackson-databind.version>
         <lang3.version>3.1</lang3.version>
+        <quartz.version>2.2.3</quartz.version>
     </properties>
 
     <dependencyManagement>
@@ -47,6 +49,12 @@
                 <version>${spring-boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <!--######################### 定义 spring context 版本 #########################-->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context-support</artifactId>
+                <version>${spring.version}</version>
             </dependency>
             <!--######################### 定义 spring batch 版本 #########################-->
             <dependency>
@@ -237,6 +245,17 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
                 <version>${spring-boot.version}</version>
+            </dependency>
+            <!--######################### 定义 quartz 版本 #########################-->
+            <dependency>
+                <groupId>org.quartz-scheduler</groupId>
+                <artifactId>quartz</artifactId>
+                <version>${quartz.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.quartz-scheduler</groupId>
+                <artifactId>quartz-jobs</artifactId>
+                <version>${quartz.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
