--- a/lsr-user-consumer/pom.xml
+++ b/lsr-user-consumer/pom.xml
@@ -1,86 +1,144 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>lsr-microservice</artifactId>
-        <groupId>cn.lsr</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    <groupId>cn.lsr</groupId>
     <artifactId>lsr-user-consumer</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>lsr-user-consumer</name>
+
+    <description>测试demo</description>
+
     <packaging>jar</packaging>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <spring-cloud.version>Greenwich.SR4</spring-cloud.version>
+        <spring-boot.version>2.1.0.RELEASE</spring-boot.version>
+        <mysql.version>5.1.46</mysql.version>
+        <mybatis.version>1.3.2</mybatis.version>
+        <mybatis.page.version>1.2.5</mybatis.page.version>
+        <consul.version>2.1.1.RELEASE</consul.version>
+        <shiro.boot.version>1.4.0</shiro.boot.version>
+        <shiro.thymeleaf.version>2.0.0</shiro.thymeleaf.version>
+        <thymeleaf.version>2.0.7.0</thymeleaf.version>
+        <lsr.version>1.0-SNAPSHOT</lsr.version>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <!--######################### 定义 spring cloud 版本 #########################-->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <!--######################### 定义 spring boot 版本 #########################-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <dependency>
             <groupId>cn.lsr</groupId>
             <artifactId>lsr-common</artifactId>
+            <version>${lsr.version}</version>
         </dependency>
         <dependency>
             <groupId>cn.lsr</groupId>
             <artifactId>lsr-redis-core</artifactId>
+            <version>${lsr.version}</version>
         </dependency>
         <dependency>
             <groupId>cn.lsr</groupId>
             <artifactId>lsr-core-base</artifactId>
+            <version>${lsr.version}</version>
         </dependency>
         <dependency>
             <groupId>cn.lsr</groupId>
             <artifactId>lsr-quartz-job</artifactId>
+            <version>${lsr.version}</version>
         </dependency>
         <!--######################### spring boot web 依赖 #########################-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <!-- 排除默认的logback日志，使用log4j-->
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
+            <version>${spring-boot.version}</version>
         </dependency>
         <!--######################### 定义 log4j 版本 #########################-->
         <!-- 支持log4j2的模块，注意把spring-boot-starter和spring-boot-starter-web包中的logging去掉 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-log4j2</artifactId>
+            <version>${spring-boot.version}</version>
         </dependency>
         <!--######################### 定义 shiro 版本 #########################-->
         <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-spring-boot-web-starter</artifactId>
+            <version>${shiro.boot.version}</version>
         </dependency>
         <!--######################### 定义 thymeleaf 版本 #########################-->
         <dependency>
             <groupId>com.github.theborakompanioni</groupId>
             <artifactId>thymeleaf-extras-shiro</artifactId>
+            <version>${shiro.thymeleaf.version}</version>
         </dependency>
         <dependency>
             <groupId>com.github.spt-oss</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <version>${thymeleaf.version}</version>
         </dependency>
         <!--######################### 定义 mysql 版本 #########################-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.version}</version>
         </dependency>
         <!--######################### 定义 mybatis 版本 #########################-->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>${mybatis.version}</version>
         </dependency>
         <!--######################### 定义 分页插件 版本 #########################-->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>${mybatis.page.version}</version>
         </dependency>
         <!--######################### 定义 consul 版本 #########################-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-consul-discovery</artifactId>
+            <version>${consul.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-consul-config</artifactId>
+            <version>${consul.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+            <version>${consul.version}</version>
         </dependency>
     </dependencies>
 
