--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>lsr-batch-processing</module>
         <module>lsr-quartz-job</module>
         <module>lsr-flow</module>
+        <module>lsr-rpc</module>
+        <module>lsr-mvc</module>
     </modules>
     <packaging>pom</packaging>
 
